--- a/dev/how_to_cite/index.html
+++ b/dev/how_to_cite/index.html
@@ -137,9 +137,7 @@
 <p>If you use <strong>GRANAD</strong> in your research or publications, please cite the following references appropriately. Proper citation helps acknowledge the development efforts and supports continued improvements.</p>
 <h2 id="general-citation">General Citation</h2>
 <p>When referring to <strong>GRANAD</strong> in your work, please use the following general citation:</p>
-<blockquote>
-<p>tbd</p>
-</blockquote>
+<p><strong>David Dams, Miriam Kosik, Marvin Müller, Abhishek Ghosh, Antton Babaze, Julia Szczuczko, Garnett W. Bryant, Andrés Ayuela, Carsten Rockstuhl, Marta Pelc &amp; Karolina Słowik</strong> (2025). <em>GRANAD - Simulating GRAphene nanoflakes with ADatoms</em>. <em>Computer Physics Communications</em>, <strong>317</strong>, 109818. <a href="https://doi.org/10.1016/j.cpc.2025.109818">https://doi.org/10.1016/j.cpc.2025.109818</a></p>
 <h2 id="recommended-references">Recommended References</h2>
 <p>For specific methodologies and theoretical background, please cite the relevant publications:
 The theoretical framework for modeling optical response of graphene nanoflakes was introduced in <a href="https://www.nature.com/articles/ncomms6725">Cox et al.</a>.
@@ -157,7 +155,7 @@ GRANAD was built based on the following framework extensions:</p>
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 6c333e4ff57ed0fc7e8f24f5029f814ab786f819
+    <strong>Commit:</strong> 21f233be0f5e6a06c2f5400e7b903d463728e41f
 </div>
           
         </div>
