--- a/dev/tutorials/l_master/index.html
+++ b/dev/tutorials/l_master/index.html
@@ -249,7 +249,7 @@ No artists with labels found to put in legend.  Note that artists whose label st
 <div class="language-python highlight"><pre><span></span><code><span id="__span-9-1"><a id="__codelineno-9-1" name="__codelineno-9-1" href="#__codelineno-9-1"></a><span class="n">dissipator_model</span> <span class="o">=</span> <span class="n">flake</span><span class="o">.</span><span class="n">get_dissipator</span><span class="p">(</span><span class="n">relaxation_rate</span> <span class="o">=</span> <span class="mi">1</span><span class="o">/</span><span class="mi">10</span><span class="p">)</span>
 </span><span id="__span-9-2"><a id="__codelineno-9-2" name="__codelineno-9-2" href="#__codelineno-9-2"></a><span class="nb">print</span><span class="p">(</span> <span class="n">dissipator_model</span> <span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7f4974ac2e80&gt;}
+<div class="language-text highlight"><pre><span></span><code>{&#39;decoherence_time&#39;: &lt;function DecoherenceTime.&lt;locals&gt;.&lt;lambda&gt; at 0x7fed42a4a980&gt;}
 </code></pre></div>
 <p>NOTE: To pass the dissipator above to the <code>master_equation</code> method, you have to specify the relaxation rate again. </p>
 <h2 id="postprocessing">Postprocessing</h2>
@@ -272,7 +272,7 @@ RHS compiled
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 4d1c6e7e13d1d427ec44159b90119d233121aa6a
+    <strong>Commit:</strong> c85e3a6b47a91c360234d1b1997eaa1d9dbe112e
 </div>
           
         </div>
