--- a/dev/tutorials/b_list_based_simulations/index.html
+++ b/dev/tutorials/b_list_based_simulations/index.html
@@ -199,8 +199,8 @@ Included tags with number of orbitals: {&#39;atom&#39;: 2}
 <div class="language-python highlight"><pre><span></span><code><span id="__span-8-1"><a id="__codelineno-8-1" name="__codelineno-8-1" href="#__codelineno-8-1"></a><span class="n">atom</span><span class="o">.</span><span class="n">set_hamiltonian_element</span><span class="p">(</span> <span class="n">upper_level</span><span class="p">,</span> <span class="n">lower_level</span><span class="p">,</span> <span class="mf">0.1</span><span class="n">j</span><span class="p">)</span> <span class="c1"># changes the same element </span>
 </span><span id="__span-8-2"><a id="__codelineno-8-2" name="__codelineno-8-2" href="#__codelineno-8-2"></a><span class="nb">print</span><span class="p">(</span><span class="n">atom</span><span class="o">.</span><span class="n">hamiltonian</span><span class="p">)</span>
 </span></code></pre></div>
-<div class="language-text highlight"><pre><span></span><code>[[-0.5  0. ]
- [ 0.   0.5]]
+<div class="language-text highlight"><pre><span></span><code>[[-0.5-0.j   0. +0.1j]
+ [ 0. -0.1j  0.5-0.j ]]
 </code></pre></div>
 <p>Setting Coulomb matrix elements proceeds analogously by calling <code>atom.set_coulomb_element</code>.</p>
 <p>We see that the matrix entry corresponding to the inter-level coupling is now modified accordingly, with hermiticity of the Hamiltonian taken into account properly.</p>
@@ -363,7 +363,7 @@ Included tags with number of orbitals: {&#39;atom&#39;: 2}
             </div>
           </div><div style="text-align: center; font-size: 14px; padding: 10px;">
     <strong>Documentation Version:</strong> development |
-    <strong>Commit:</strong> 8e31b6fc614257bba1885db5fa46df78aec16b78
+    <strong>Commit:</strong> cdebbc7eca979243290bc5e8fcf7d3a5e4c96733
 </div>
           
         </div>
